--- a/Natours-project/sass/layout/_navigation.scss
+++ b/Natours-project/sass/layout/_navigation.scss
@@ -35,6 +35,7 @@
     top: 0;
     left: 0;
     z-index: 1500;
+    visibility: hidden;
     opacity: 0;
     width: 0;
     transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -88,6 +89,7 @@
   &__checkbox:checked ~ &__nav {
     width: 100%;
     opacity: 1;
+    visibility: visible;
   }
 
   // ICON
